--- a/src/components/modals/new-game/new-game.module.css
+++ b/src/components/modals/new-game/new-game.module.css
@@ -6,3 +6,15 @@
 .checkbox_label {
     width: 130px;
 }
+
+.infinite_seconds_block {
+    height: 46px;
+    width: 100%;
+    transition: height var(--standard-animation-time);
+    overflow: hidden;
+}
+
+.infinite_seconds_block.collapsed {
+    height: 0;
+    transition: height var(--standard-animation-time);
+}
